// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnPosition snapshots should render ColumnPosition 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="x"
              maxlength="6"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="y"
              maxlength="6"
              type="number"
              value="0"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnPosition snapshots should render when some element has alignment 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--disabled TextFieldWrapper--disabled--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="x"
              disabled=""
              maxlength="6"
              type="text"
              value="Locked"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--disabled TextFieldWrapper--disabled--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="y"
              disabled=""
              maxlength="6"
              type="text"
              value="Locked"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ConstrainsView ConstrainsView--light"
            data-test-box=""
          >
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--bottom ConstrainsView__constrain--bottom--light"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--centerHorizontal ConstrainsView__constrain--centerHorizontal--light"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--centerVertical ConstrainsView__constrain--centerVertical--light"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--left ConstrainsView__constrain--left--light"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--right ConstrainsView__constrain--right--light"
            />
            <div
              class="ConstrainsView__constrain ConstrainsView__constrain--light ConstrainsView__constrain--top ConstrainsView__constrain--top--light"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnPosition snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Position
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="x"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="x"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="x"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                X
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="x"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            X - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="y"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="y"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="y"
            >
              <small
                class="css-1jnxvbp Typography Typography--light Typography--neutral2 Typography--neutral2--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                data-test-text=""
                style="text-align: inherit;"
              >
                Y
              </small>
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="y"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Y - position
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
